# battlesnake-ml

./: features.py  ml_features.py  pyproject.toml  run.py  training_data.csv
battelsnake_ml/: train_model.py
battlesnake_ml/: features.py  run.py  train_model.py
models/model.pkl/production/battlesnake_ml/: features.py  run.py  train_model.py  training_data.csv
