[project]
name = "battlesnake-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Eren Temizkan",email = "eren.temizkan@uni-rostock.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "joblib (>=1.5.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "battlesnake_ml", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
